--- a/read favor/main.css
+++ b/read favor/main.css
@@ -2,9 +2,19 @@ body{
 	font-size:14px;
 	font-family:"Hiragino Sans GB";
 	line-height: 24px;
-    margin:20px 40px;
+  margin:20px 40px;
 }
 
 h1{
     line-height:48px;
+}
+
+img{
+  max-width: 480px;
+}
+
+span[style]{
+  font-size:14px !important;
+  font-family:"Hiragino Sans GB" !important;
+  line-height: 24px !important;
 }
