--- a/read favor/main.css
+++ b/read favor/main.css
@@ -1,6 +1,6 @@
 body{
 	font-size:14px;
-	font-family:"Hiragino Sans GB";
+	font-family:'Georgia',"Hiragino Sans GB";
 	line-height: 24px;
   margin:20px 40px;
 }
@@ -15,6 +15,6 @@ img{
 
 span[style]{
   font-size:14px !important;
-  font-family:"Hiragino Sans GB" !important;
+  font-family:'Georgia',"Hiragino Sans GB" !important;
   line-height: 24px !important;
 }
